Fixing missing TOC. Existing pages tidy up.

--- a/modules/reference/pages/spacecmd/activationkey.adoc
+++ b/modules/reference/pages/spacecmd/activationkey.adoc
@@ -2,9 +2,7 @@
 = activationkey
 
 
-
 The following spacecmd commands are available for use with activation keys.
-
 
 
 == activationkey_addchildchannels
@@ -15,7 +13,6 @@ Add child channels to an activation key.
 --
 usage: activationkey_addchildchannels KEY <CHANNEL ...>
 --
-
 
 
 == activationkey_addconfigchannels
@@ -32,21 +29,21 @@ options:
 --
 
 
-
 == activationkey_addentitlements
 
 Add available entitlements to an activation key.
-
-.WebUI Name Change
-NOTE: In the WebUI entitlements are known as System Types.
-Nevertheless the spacecmd backend still utilizes the entitlements term.
-Therefore any scripts you may be using can remain unchanged.
 
 [source]
 --
 usage: activationkey_addentitlements KEY <ENTITLEMENT ...>
 --
 
+[NOTE]
+====
+In the WebUI entitlements are known as System Types.
+Nevertheless the spacecmd backend still utilizes the entitlements term.
+Therefore any scripts you may be using can remain unchanged.
+====
 
 
 == activationkey_addgroups
@@ -59,7 +56,6 @@ usage: activationkey_addgroups KEY <GROUP ...>
 --
 
 
-
 == activationkey_addpackages
 
 Add packages to an activation key.
@@ -68,7 +64,6 @@ Add packages to an activation key.
 --
 usage: activationkey_addpackages KEY <PACKAGE ...>
 --
-
 
 
 == activationkey_clone
@@ -92,7 +87,6 @@ options:
 --
 
 
-
 == activationkey_create
 
 Create a new activation key.
@@ -110,7 +104,6 @@ options:
 --
 
 
-
 == activationkey_delete
 
 Delete an existing activation key.
@@ -119,7 +112,6 @@ Delete an existing activation key.
 --
 usage: activationkey_delete KEY
 --
-
 
 
 == activationkey_details
@@ -133,7 +125,6 @@ usage: activationkey_details KEY ...
 --
 
 
-
 == activationkey_diff
 
 Check the difference between two activation keys.
@@ -142,7 +133,6 @@ Check the difference between two activation keys.
 --
 usage: activationkey_diff SOURCE_ACTIVATIONKEY TARGET_ACTIVATIONKEY
 --
-
 
 
 == activationkey_disable
@@ -155,7 +145,6 @@ usage: activationkey_disable KEY [KEY ...]
 --
 
 
-
 == activationkey_disableconfigdeployment
 
 Disable configuration channel deployment for an existing activation key.
@@ -164,7 +153,6 @@ Disable configuration channel deployment for an existing activation key.
 --
 usage: activationkey_disableconfigdeployment KEY
 --
-
 
 
 == activationkey_enable
@@ -177,7 +165,6 @@ usage: activationkey_enable KEY [KEY ...]
 --
 
 
-
 == activationkey_enableconfigdeployment
 
 Enable configuration channel deployment for an existing activation key.
@@ -186,7 +173,6 @@ Enable configuration channel deployment for an existing activation key.
 --
 usage: activationkey_enableconfigdeployment KEY
 --
-
 
 
 == activationkey_export
@@ -206,7 +192,6 @@ Note : KEY list is optional, default is to export ALL keys
 --
 
 
-
 == activationkey_import
 Import activation keys from JSON files
 
@@ -214,7 +199,6 @@ Import activation keys from JSON files
 --
 usage: activationkey_import <JSONFILE ...>
 --
-
 
 
 == activationkey_list
@@ -227,7 +211,6 @@ usage: activationkey_list
 --
 
 
-
 == activationkey_listbasechannel
 
 List the base channel associated with an activation key.
@@ -236,7 +219,6 @@ List the base channel associated with an activation key.
 --
 usage: activationkey_listbasechannel KEY
 --
-
 
 
 == activationkey_listchildchannels
@@ -249,7 +231,6 @@ usage: activationkey_listchildchannels KEY
 --
 
 
-
 == activationkey_listconfigchannels
 
 List configuration channels associated with an activation key.
@@ -258,7 +239,6 @@ List configuration channels associated with an activation key.
 --
 usage: activationkey_listconfigchannels KEY
 --
-
 
 
 == activationkey_listentitlements
@@ -271,7 +251,6 @@ usage: activationkey_listentitlements KEY
 --
 
 
-
 == activationkey_listgroups
 
 List groups associated with an activation key
@@ -280,7 +259,6 @@ List groups associated with an activation key
 --
 usage: activationkey_listgroups KEY
 --
-
 
 
 == activationkey_listpackages
@@ -293,7 +271,6 @@ usage: activationkey_listpackages KEY
 --
 
 
-
 == activationkey_listsystems
 
 List systems registered with an activation key.
@@ -302,7 +279,6 @@ List systems registered with an activation key.
 --
 usage: activationkey_listsystems KEY
 --
-
 
 
 == activationkey_removechildchannels
@@ -315,7 +291,6 @@ usage: activationkey_removechildchannels KEY <CHANNEL ...>
 --
 
 
-
 == activationkey_removeconfigchannels
 
 Remove configuration channels from an activation key.
@@ -324,7 +299,6 @@ Remove configuration channels from an activation key.
 --
 usage: activationkey_removeconfigchannels KEY <CHANNEL ...>
 --
-
 
 
 == activationkey_removeentitlements
@@ -337,7 +311,6 @@ usage: activationkey_removeentitlements KEY <ENTITLEMENT ...>
 --
 
 
-
 == activationkey_removegroups
 
 Remove groups from an activation key.
@@ -346,7 +319,6 @@ Remove groups from an activation key.
 --
 usage: activationkey_removegroups KEY <GROUP ...>
 --
-
 
 
 == activationkey_removepackages
@@ -359,7 +331,6 @@ usage: activationkey_removepackages KEY <PACKAGE ...>
 --
 
 
-
 == activationkey_setbasechannel
 
 Set the base channel for an activation key.
@@ -370,7 +341,6 @@ usage: activationkey_setbasechannel KEY CHANNEL
 --
 
 
-
 == activationkey_setconfigchannelorder
 
 Set the ranked order of configuration channels.
@@ -379,7 +349,6 @@ Set the ranked order of configuration channels.
 --
 usage: activationkey_setconfigchannelorder KEY
 --
-
 
 
 == activationkey_setcontactmethod
@@ -393,7 +362,6 @@ usage: activationkey_setcontactmethod KEY CONTACT_METHOD
 --
 
 
-
 == activationkey_setdescription
 
 Add a description for an activation key.
@@ -402,7 +370,6 @@ Add a description for an activation key.
 --
 usage: activationkey_setdescription KEY DESCRIPTION
 --
-
 
 
 == activationkey_setuniversaldefault
@@ -414,9 +381,10 @@ Set a specific key as the universal default.
 usage: activationkey_setuniversaldefault KEY
 --
 
-.Universal Default Key
-WARNING: Using a universal default key is not a Best Practice recommendation.
-
+[WARNING]
+==== 
+Using a universal default key is not a Best Practice recommendation.
+====
 
 
 == activationkey_setusagelimit
@@ -429,7 +397,6 @@ usage: activationkey_setbasechannel KEY <usage limit>
 usage: activationkey_setbasechannel KEY unlimited
 --
 
-.Usage Limits
 [TIP]
 ====
 Usage limits are only applicable to traditionally managed systems.
