--- a/modules/reference/pages/spacecmd/clear_caches.adoc
+++ b/modules/reference/pages/spacecmd/clear_caches.adoc
@@ -1,7 +1,7 @@
 [[ref-spacecmd-clearcaches]]
 = clear_caches
 
-Clear the internal caches kept for systems and packages
+Clear the internal caches kept for systems and packages.
 
 [source]
 --
