--- a/modules/reference/pages/spacecmd/misc-help-topics.adoc
+++ b/modules/reference/pages/spacecmd/misc-help-topics.adoc
@@ -3,9 +3,13 @@
 
 The following help topics are printed with all functions requiring the relevant information.
 
-time::
+
+
+== time 
+
 Dates can be any of the following:
-+
+
+[source]
 ----
 Explicit Dates:
 Dates can be expressed as explicit date strings in the YYYYMMDD[HHMM] format.
@@ -22,9 +26,14 @@ m -> minutes
 h -> hours
 d -> days
 ----
-systems::
+
+
+
+== systems
+
 <SYSTEMS> can be any of the following:
-+
+
+[source]
 ----
 name
 ssm (see 'help ssm')
@@ -32,10 +41,15 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-ssm::
+
+
+
+== ssm
+
 The System Set Manager (SSM) is a group of systems that you
 can perform tasks on as a group.
-+
+
+[source]
 ----
 Adding Systems:
 > ssm_add group:rhel5-x86_64
