--- a/modules/reference/pages/spacecmd/repo.adoc
+++ b/modules/reference/pages/spacecmd/repo.adoc
@@ -3,21 +3,35 @@
 
 The following spacecmd functions are available for working with repositories.
 
-repo_addfilters::
+
+
+== repo_addfilters
+
 Add filters for a user repository.
-+
+
+[source]
 ----
 usage: repo_addfilters repo <filter ...>
 ----
-repo_clearfilters::
+
+
+
+== repo_clearfilters
+
 Clears the filters for a user repository.
-+
+
+[source]
 ----
 usage: repo_clearfilters repo
 ----
-repo_create::
+
+
+
+== repo_create
+
 Create a user repository.
-+
+
+[source]
 ----
 usage: repo_create <options>
 
@@ -29,51 +43,91 @@ options:
   --cert       SSL Client certificate (not required)
   --key        SSL Client key (not required)
 ----
-repo_delete::
+
+
+
+== repo_delete
+
 Delete a user repository.
-+
+
+[source]
 ----
 usage: repo_delete <repo ...>
 ----
-repo_details::
+
+
+
+== repo_details
+
 Show the details of a user repository.
-+
+
+[source]
 ----
 usage: repo_details <repo ...>
 ----
-repo_list::
+
+
+
+== repo_list
+
 List all available user repository.
-+
+
+[source]
 ----
 usage: repo_list
 ----
-repo_listfilters::
+
+
+
+== repo_listfilters
+
 Show the filters for a user repository.
-+
+
+[source]
 ----
 usage: repo_listfilters repo
 ----
-repo_removefilters::
+
+
+
+===repo_removefilters
+
 Remove filters from a user repository.
-+
+
+[source]
 ----
 usage: repo_removefilters repo <filter ...>
 ----
-repo_rename::
+
+
+
+== repo_rename
+
 Rename a user repository.
-+
+
+[source]
 ----
 usage: repo_rename OLDNAME NEWNAME
 ----
-repo_setfilters::
+
+
+
+== repo_setfilters
+
 Set the filters for a user repo.
-+
+
+[source]
 ----
 usage: repo_setfilters repo <filter ...>
 ----
-repo_updatessl::
+
+
+
+== repo_updatessl
+
 Change the SSL certificates of a user repository.
-+
+
+[source]
 ----
 usage: repo_updatessl <options>
 options:
@@ -81,9 +135,14 @@ options:
   --cert       SSL Client certificate (not required)
   --key        SSL Client key (not required)
 ----
-repo_updateurl::
+
+
+
+== repo_updateurl
+
 Change the URL of a user repository.
-+
+
+[source]
 ----
 usage: repo_updateurl <repo> <url>
 ----
