--- a/modules/reference/pages/spacecmd/scap.adoc
+++ b/modules/reference/pages/spacecmd/scap.adoc
@@ -3,27 +3,43 @@
 
 The following spacecmd functions are available for working with OpenSCAP.
 
-scap_getxccdfscandetails::
+== scap_getxccdfscandetails
+
 Get details of given OpenSCAP XCCDF scan.
-+
+
+[source]
 ----
 usage: scap_getxccdfscandetails <XID>
 ----
-scap_getxccdfscanruleresults::
+
+
+== scap_getxccdfscanruleresults
+
 Return a full list of RuleResults for given OpenSCAP XCCDF scan.
-+
+
+[source]
 ----
 usage: scap_getxccdfscanruleresults <XID>
 ----
-scap_listxccdfscans::
+
+
+
+== scap_listxccdfscans
+
 Return a list of finished OpenSCAP scans for given systems.
-+
+
+[source]
 ----
 usage: scap_listxccdfscans <SYSTEMS>
 ----
-scap_schedulexccdfscan::
+
+
+
+== scap_schedulexccdfscan
+
 Schedule Scap XCCDF scan.
-+
+
+[source]
 ----
 usage: scap_schedulexccdfscan PATH_TO_XCCDF_FILE XCCDF_OPTIONS SYSTEMS
 
