--- a/modules/reference/pages/spacecmd/snippet.adoc
+++ b/modules/reference/pages/spacecmd/snippet.adoc
@@ -3,9 +3,13 @@
 
 The following spacecmd functions are available for working with Kickstart snippets.
 
-snippet_create::
+
+
+== snippet_create
+
 Create a Kickstart snippet
-+
+
+[source]
 ----
 usage: snippet_create [options]
 
@@ -13,27 +17,47 @@ options:
   -n NAME
   -f FILE
 ----
-snippet_delete::
+
+
+
+== snippet_delete
+
 Delete a Kickstart snippet.
-+
+
+[source]
 ----
 usage: snippet_removefile NAME
 ----
-snippet_details::
+
+
+
+== snippet_details
+
 Show the contents of a snippet.
-+
+
+[source]
 ----
 usage: snippet_details SNIPPET ...
 ----
-snippet_list::
+
+
+
+== snippet_list
+
 List the available Kickstart snippets.
-+
+
+[source]
 ----
 usage: snippet_list
 ----
-snippet_update::
+
+
+
+== snippet_update
+
 Update a Kickstart snippet.
-+
+
+[source]
 ----
 usage: snippet_update NAME
 ----
