--- a/modules/reference/pages/spacecmd/user.adoc
+++ b/modules/reference/pages/spacecmd/user.adoc
@@ -3,27 +3,45 @@
 
 The following spacecmd functions are available managing users.
 
-user_adddefaultgroup::
+
+
+== user_adddefaultgroup
 Add a default group to an user account.
-+
+
+[source]
 ----
 usage: user_adddefaultgroup USER <GROUP ...>
 ----
-user_addgroup::
+
+
+
+== user_addgroup
+
 Add a group to an user account.
-+
+
+[source]
 ----
 usage: user_addgroup USER <GROUP ...>
 ----
-user_addrole::
+
+
+
+== user_addrole
+
 Add a role to an user account.
-+
+
+[source]
 ----
 usage: user_addrole USER ROLE
 ----
-user_create::
+
+
+
+== user_create
+
 Create an user.
-+
+
+[source]
 ----
 usage: user_create [options]
 
@@ -35,87 +53,157 @@ options:
   -p PASSWORD
   --pam enable PAM authentication
 ----
-user_delete::
+
+
+
+== user_delete
+
 Delete an user.
-+
+
+[source]
 ----
 usage: user_delete NAME
 ----
-user_details::
+
+
+
+== user_details
+
 Show the details of an user.
-+
+
+[source]
 ----
 usage: user_details USER ...
 ----
-user_disable::
+
+
+
+== user_disable
+
 Disable an user account.
-+
+
+[source]
 ----
 usage: user_disable NAME
 ----
-user_enable::
+
+
+
+== user_enable
+
 Enable an user account.
-+
+
+[source]
 ----
 usage: user_enable NAME
 ----
-user_list::
+
+
+
+== user_list
+
 List all users.
-+
+
+[source]
 ----
 usage: user_list
 ----
-user_listavailableroles::
+
+
+
+== user_listavailableroles
+
 List all available roles for users.
-+
+
+[source]
 ----
 usage: user_listavailableroles
 ----
-user_removedefaultgroup::
+
+
+
+== user_removedefaultgroup
+
 Remove a default group from an user account.
-+
+
+[source]
 ----
 usage: user_removedefaultgroup USER <GROUP ...>
 ----
-user_removegroup::
+
+
+
+== user_removegroup
+
 Remove a group to an user account.
-+
+
+[source]
 ----
 usage: user_removegroup USER <GROUP ...>
 ----
-user_removerole::
+
+
+
+== user_removerole
+
 Remove a role from an user account.
-+
+
+[source]
 ----
 usage: user_removerole USER ROLE
 ----
-user_setemail::
+
+
+
+== user_setemail
+
 Set an user accounts email field.
-+
+
+[source]
 ----
 usage: user_setemail USER EMAIL
 ----
-user_setfirstname::
+
+
+
+== user_setfirstname
+
 Set an user accounts first name field.
-+
+
+[source]
 ----
 usage: user_setfirstname USER FIRST_NAME
 ----
-user_setlastname::
+
+
+
+== user_setlastname
+
 Set an user accounts last name field.
-+
+
+[source]
 ----
 usage: user_setlastname USER LAST_NAME
 ----
-user_setpassword::
+
+
+
+== user_setpassword
+
 Set an user accounts name prefix field.
-+
+
+[source]
 ----
 usage: user_setpassword USER PASSWORD
 ----
-user_setprefix::
+
+
+
+== user_setprefix
+
 Set an user accounts name prefix field.
-+
+
+[source]
 ----
 usage: user_setprefix USER PREFIX
 ----
