--- a/modules/reference/pages/spacecmd/whoami.adoc
+++ b/modules/reference/pages/spacecmd/whoami.adoc
@@ -3,9 +3,13 @@
 
 The following command is available for returning the currently logged spacecmd username.
 
-whoami::
+
+
+== whoami
+
 Print the currently logged spacecmd user.
-+
+
+[source]
 ----
 spacecmd {SSM:0}> whoami
 admin
