--- a/modules/reference/pages/spacecmd/whoamitalkingto.adoc
+++ b/modules/reference/pages/spacecmd/whoamitalkingto.adoc
@@ -3,9 +3,13 @@
 
 The following spacecmd function is available for returning the server hostname.
 
-whoamitalkingto::
+
+
+== whoamitalkingto
+
 Return the server hostname that spacecmd is connected with.
-+
+
+[source]
 ----
 spacecmd {SSM:0}> whoamitalkingto
 MGR_SERVER_HOSTNAME
