--- a/modules/reference/pages/spacecmd/ssm.adoc
+++ b/modules/reference/pages/spacecmd/ssm.adoc
@@ -3,9 +3,12 @@
 
 The following spacecmd functions are available for use with the system set manager (SSM).
 
-ssm_add::
+
+
+== ssm_add
 Add systems to the SSM.
-+
+
+[source]
 ----
 usage: ssm_add <SYSTEMS>
 
@@ -18,15 +21,24 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNEL
 ----
-ssm_clear::
+
+
+
+== ssm_clear
+
 Remove all systems from the SSM.
-+
+
+[source]
 ----
 usage: ssm_clear
 ----
-ssm_intersect::
+
+
+
+== ssm_intersect
 Replace the current SSM with the intersection of the current list of systems and the list of systems passed as arguments.
-+
+
+[source]
 ----
 usage: ssm_intersect <SYSTEMS>
 
@@ -39,15 +51,22 @@ search:QUERY (see 'help system_search')
 group:GROUP
 channel:CHANNE
 ----
-ssm_list::
+
+
+
+== ssm_list
 List the systems currently in the SSM.
-+
+
+[source]
 ----
 usage: ssm_list
 
 see 'help ssm' for more details
 ----
-ssm_remove::
+
+
+
+== ssm_remove
 Remove systems from the SSM.
 +
 ----
