--- a/modules/reference/pages/spacecmd/toggle.adoc
+++ b/modules/reference/pages/spacecmd/toggle.adoc
@@ -3,9 +3,10 @@
 
 The following spacecmd functions are available to toggle functions on and off.
 
-toggle_confirmations::
+== toggle_confirmations
 Toggle confirmation messages on/off.
-+
+
+[source]
 ----
 usage: toggle_confirmations
 ----
