--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -14,6 +14,14 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
+[NOTE]
+====
+Direct synchronizing Unbreakable Linux Network (ULN) repositories with {productname} are not currently supported.
+An Oracle Local Distribution for ULN must be used.
+To set up a local ULN mirror, consult the Oracle documentation provided at this https://docs.oracle.com/en/operating-systems/oracle-linux/software-management/sfw-mgmt-UseSoftwareDistributionMirrors.html#local-uln-mirror[link].
+====
+
+
 
 == Add Software Channels
 
