--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -18,7 +18,7 @@ endif::[]
 ====
 Direct synchronizing Unbreakable Linux Network (ULN) repositories with {productname} are not currently supported.
 An Oracle Local Distribution for ULN must be used.
-To set up a local ULN mirror, consult the Oracle documentation provided at this https://docs.oracle.com/en/operating-systems/oracle-linux/software-management/sfw-mgmt-UseSoftwareDistributionMirrors.html#local-uln-mirror[link].
+For more information about setting up a local ULN mirror, see the Oracle documentation provided at https://docs.oracle.com/en/operating-systems/oracle-linux/software-management/sfw-mgmt-UseSoftwareDistributionMirrors.html#local-uln-mirror.
 ====
 
 
