Fixing missing TOC. Existing pages tidy up. (#2296)
* Fixing missing TOC. Existing pages tidy up.

* Cont.

* Cont.

* Added changelog.

--- a/modules/reference/pages/spacecmd/activationkey.adoc
+++ b/modules/reference/pages/spacecmd/activationkey.adoc
@@ -1,8 +1,6 @@
 [[ref-spacecmd-activationkey]]
 = activationkey
 
-
-
 The following spacecmd commands are available for use with activation keys.
 
 
@@ -37,15 +35,17 @@ options:
 
 Add available entitlements to an activation key.
 
-.WebUI Name Change
-NOTE: In the WebUI entitlements are known as System Types.
-Nevertheless the spacecmd backend still utilizes the entitlements term.
-Therefore any scripts you may be using can remain unchanged.
-
 [source]
 --
 usage: activationkey_addentitlements KEY <ENTITLEMENT ...>
 --
+
+[NOTE]
+====
+In the WebUI entitlements are known as System Types.
+Nevertheless the spacecmd backend still utilizes the entitlements term.
+Therefore any scripts you may be using can remain unchanged.
+====
 
 
 
@@ -414,8 +414,10 @@ Set a specific key as the universal default.
 usage: activationkey_setuniversaldefault KEY
 --
 
-.Universal Default Key
-WARNING: Using a universal default key is not a Best Practice recommendation.
+[WARNING]
+==== 
+Using a universal default key is not a Best Practice recommendation.
+====
 
 
 
@@ -429,7 +431,6 @@ usage: activationkey_setbasechannel KEY <usage limit>
 usage: activationkey_setbasechannel KEY unlimited
 --
 
-.Usage Limits
 [TIP]
 ====
 Usage limits are only applicable to traditionally managed systems.
