SLE 15 sp5 and leap 15.5

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -6,6 +6,8 @@ This section contains information about registering clients running these {sle} 
 * {sles}{nbsp}15{nbsp}SP1
 * {sles}{nbsp}15{nbsp}SP2
 * {sles}{nbsp}15{nbsp}SP3
+* {sles}{nbsp}15{nbsp}SP4
+* {sles}{nbsp}15{nbsp}SP5
 
 ////
 * {sles}{nbsp}12{nbsp}SP5
@@ -42,9 +44,6 @@ The products you need for this procedure are:
 | OS Version
 | Product Name
 
-| {sles} 12 SP5
-| SUSE Linux Enterprise Server 12 SP5 x86_64
-
 | {sles} 15 SP1
 | SUSE Linux Enterprise Server 15 SP1 x86_64
 
@@ -53,6 +52,12 @@ The products you need for this procedure are:
 
 | {sles} 15 SP3
 | SUSE Linux Enterprise Server 15 SP3 x86_64 
+
+| {sles} 12 SP4
+| SUSE Linux Enterprise Server 12 SP4 x86_64
+
+| {sles} 12 SP5
+| SUSE Linux Enterprise Server 12 SP5 x86_64
 
 |===
 
@@ -69,9 +74,6 @@ The channels you need for this procedure are:
 | OS Version
 | Base Channel
 
-| {sles} 12 SP5
-| sle-product-sles12-sp5-pool-x86_64
-
 | {sles} 15 SP1
 | sle-product-sles15-sp1-pool-x86_64
 
@@ -80,6 +82,12 @@ The channels you need for this procedure are:
 
 | {sles} 15 SP3
 | sle-product-sles15-sp3-pool-x86_64
+
+| {sles} 12 SP4
+| sle-product-sles12-sp4-pool-x86_64
+
+| {sles} 12 SP5
+| sle-product-sles12-sp5-pool-x86_64
 
 |===
 
